Sun Dec 21 20:55:47 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/weight.h: Document the enum stat_flags values.

Sun Dec 21 20:51:47 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/weight.h: Fix indentation.

Sat Dec 20 10:40:44 GMT 2014  Sébastien Debrard <sebastien.debrard@gmail.com>

	* Makefile.am,configure.ac,pkgconfig/,xapian-core.spec.in: Generate a
	  file for pkg-config.  (Fixes#540)

Fri Dec 19 22:30:39 GMT 2014  Olly Betts <olly@survex.com>

	* common/errno_to_string.cc: Need stdlib.h under mingw.

Fri Dec 19 04:38:56 GMT 2014  Olly Betts <olly@survex.com>

	* backends/glass/glass_check.cc: Distinguish between a block in use
	  and in the freelist, and a block in the freelist more than once.

Fri Dec 19 04:37:14 GMT 2014  Olly Betts <olly@survex.com>

	* backends/glass/glass_freelist.cc,backends/glass/glass_freelist.h:
	  Avoid any mutual recursion between GlassFreeList::get_block() and
	  GlassFreeList::mark_block_unused().

Thu Dec 18 10:28:17 GMT 2014  Olly Betts <olly@survex.com>

	* common/safesyssocket.h: Include safeerrno.h when we use errno.

Thu Dec 18 06:17:18 GMT 2014  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Use POSIX O_NONBLOCK in preference to O_NDELAY
	  which has different semantics on BSD and System V.

Wed Dec 17 02:59:54 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Drop probe for gethostbyaddr() - we've not used it for
	  over 8.5 years (since e33972a5).

Wed Dec 17 02:33:36 GMT 2014  Olly Betts <olly@survex.com>

	* common/internaltypes.h: Take CHAR_BIT into account when choosing
	  types for uint2, uint4 and uint8.

Wed Dec 17 02:30:14 GMT 2014  Olly Betts <olly@survex.com>

	* api/error.cc,backends/chert/chert_btreebase.cc,
	  backends/chert/chert_table.cc,backends/flint_lock.cc,
	  backends/glass/glass_table.cc,common/,configure.ac,
	  net/remoteconnection.cc: Add errno_to_string() function which is
	  thread-safe where a suitable alternative to strerror() exists.
